syntax = "proto3";
package nft;

import "gogoproto/gogo.proto";
import "nft/nft.proto";

option go_package = "github.com/CudoVentures/cudos-node/x/nft/types";

// GenesisState defines the NFT module's genesis state
message GenesisState {
  repeated Collection collections = 1 [ (gogoproto.nullable) = false ];
}